# finops-claw-gang

./: .gitignore  CLAUDE.md  compound-engineering.local.md  migration-spec-with-citations.rtf  migration-spec.docx
docs/plans/: 2026-02-17-refactor-python-to-go-migration-plan.md
docs/solutions/integration-issues/: python-to-go-temporal-migration.md
finops-deterministic/: README.md  pyproject.toml
finops-deterministic/docs/: deterministic-redesign.md
finops-deterministic/src/finops_desk/: __init__.py  analysis.py  cli.py  executor.py  graph.py  models.py  policy.py  tools.py  triage.py  verifier.py
finops-deterministic/tests/: test_graph_runs.py  test_policy.py  test_triage_primitives.py
finops-deterministic/tools/fixtures/: cloudwatch_metrics.json  kubecost_allocation.json  resource_tags.json  ri_coverage.json  ri_utilization.json  sp_utilization.json
finops-go/: Dockerfile  docker-compose.yml  go.mod  go.sum
finops-go/cmd/api/: main.go
finops-go/cmd/cli/: main.go
finops-go/cmd/mcp-finops/: main.go
finops-go/cmd/shadow-compare/: main.go
finops-go/cmd/worker-finops/: main.go
finops-go/docs/: cutover-runbook.md  deployment.md
finops-go/internal/agui/: events.go  stream.go  stream_test.go
finops-go/internal/analysis/: interfaces.go  planner.go  planner_test.go
finops-go/internal/api/: auth.go  auth_test.go  handlers.go  handlers_test.go  middleware.go  responses.go  server.go
finops-go/internal/config/: config.go  config_test.go
finops-go/tests/: contract_test.go  integration_test.go  workflow_replay_test.go
finops-go/web/: package.json
(+99 files in other folders)
